--- a/index.html
+++ b/index.html
@@ -41,7 +41,211 @@
 
 		<div class="row">
 		<div class="col-md-12">
-			<img alt="World Map" src="img/world-map.png" class="full-size padding">
+			<table id="Tabla_01" width="1201" height="577" border="0" cellpadding="0" cellspacing="0">
+	<tr>
+		<td colspan="21">
+			<img src="img/world-map_01.jpg" width="1200" height="61" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="1" height="61" alt=""></td>
+	</tr>
+	<tr>
+		<td colspan="9" rowspan="10">
+			<img src="img/world-map_02.jpg" width="487" height="155" alt=""></td>
+		<td colspan="3" rowspan="2">
+			<img src="img/world-map_03.jpg" width="42" height="55" alt=""></td>
+		<td colspan="9">
+			<img src="img/world-map_04.jpg" width="671" height="41" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="1" height="41" alt=""></td>
+	</tr>
+	<tr>
+		<td rowspan="5">
+			<img src="img/world-map_05.jpg" width="4" height="52" alt=""></td>
+		<td rowspan="3">
+			<img src="img/world-map_06.jpg" width="45" height="33" alt=""></td>
+		<td colspan="7" rowspan="4">
+			<img src="img/world-map_07.jpg" width="622" height="39" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="1" height="14" alt=""></td>
+	</tr>
+	<tr>
+		<td colspan="3">
+			<img src="img/world-map_08.jpg" width="42" height="6" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="1" height="6" alt=""></td>
+	</tr>
+	<tr>
+		<td rowspan="4">
+			<img src="img/world-map_09.jpg" width="33" height="39" alt=""></td>
+		<td colspan="2" rowspan="3">
+			<img src="img/world-map_10.jpg" width="9" height="32" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="1" height="13" alt=""></td>
+	</tr>
+	<tr>
+		<td rowspan="2">
+			<img src="img/world-map_11.jpg" width="45" height="19" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="1" height="6" alt=""></td>
+	</tr>
+	<tr>
+		<td rowspan="13">
+			<img src="img/world-map_12.jpg" width="2" height="435" alt=""></td>
+		<td rowspan="4">
+			<img src="img/world-map_13.jpg" width="57" height="46" alt=""></td>
+		<td colspan="5" rowspan="8">
+			<img src="img/world-map_14.jpg" width="563" height="112" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="1" height="13" alt=""></td>
+	</tr>
+	<tr>
+		<td rowspan="12">
+			<img src="img/world-map_15.jpg" width="5" height="422" alt=""></td>
+		<td colspan="3" rowspan="2">
+			<img src="img/world-map_16.jpg" width="53" height="26" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="1" height="7" alt=""></td>
+	</tr>
+	<tr>
+		<td rowspan="11">
+			<img src="img/world-map_17.jpg" width="33" height="415" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="1" height="19" alt=""></td>
+	</tr>
+	<tr>
+		<td colspan="3" rowspan="10">
+			<img src="img/world-map_18.jpg" width="53" height="396" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="1" height="7" alt=""></td>
+	</tr>
+	<tr>
+		<td rowspan="9">
+			<img src="img/world-map_19.jpg" width="57" height="389" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="1" height="29" alt=""></td>
+	</tr>
+	<tr>
+		<td colspan="6">
+			<img src="img/world-map_20.jpg" width="171" height="5" alt=""></td>
+		<td colspan="2" rowspan="3">
+			<img src="img/world-map_21.jpg" width="35" height="37" alt=""></td>
+		<td rowspan="8">
+			<img src="img/world-map_22.jpg" width="281" height="360" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="1" height="5" alt=""></td>
+	</tr>
+	<tr>
+		<td rowspan="7">
+			<img src="img/world-map_23.jpg" width="102" height="355" alt=""></td>
+		<td rowspan="3">
+			<a href="http://apple.com"><img src="img/world-map_24.jpg" width="23" height="39" alt=""></a></td>
+		<td colspan="3">
+			<img src="img/world-map_25.jpg" width="38" height="29" alt=""></td>
+		<td rowspan="2">
+			<img src="img/world-map_26.jpg" width="8" height="32" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="1" height="29" alt=""></td>
+	</tr>
+	<tr>
+		<td rowspan="2">
+			<img src="img/world-map_27.jpg" width="4" height="10" alt=""></td>
+		<td colspan="2">
+			<img src="img/world-map_28.jpg" width="34" height="3" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="1" height="3" alt=""></td>
+	</tr>
+	<tr>
+		<td rowspan="5">
+			<img src="img/world-map_29.jpg" width="15" height="323" alt=""></td>
+		<td colspan="3" rowspan="2">
+			<img src="img/world-map_30.jpg" width="45" height="35" alt=""></td>
+		<td rowspan="5">
+			<img src="img/world-map_31.jpg" width="17" height="323" alt=""></td>
+		<td colspan="2" rowspan="3">
+			<img src="img/world-map_32.jpg" width="236" height="42" alt=""></td>
+		<td rowspan="2">
+			<img src="img/world-map_33.jpg" width="30" height="35" alt=""></td>
+		<td colspan="2" rowspan="3">
+			<img src="img/world-map_34.jpg" width="297" height="42" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="1" height="7" alt=""></td>
+	</tr>
+	<tr>
+		<td colspan="2" rowspan="4">
+			<img src="img/world-map_35.jpg" width="27" height="316" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="1" height="28" alt=""></td>
+	</tr>
+	<tr>
+		<td colspan="3" rowspan="3">
+			<img src="img/world-map_36.jpg" width="45" height="288" alt=""></td>
+		<td>
+			<img src="img/world-map_37.jpg" width="30" height="7" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="1" height="7" alt=""></td>
+	</tr>
+	<tr>
+		<td rowspan="2">
+			<img src="img/world-map_38.jpg" width="198" height="281" alt=""></td>
+		<td colspan="3">
+			<img src="img/world-map_39.png" width="88" height="65" alt=""></td>
+		<td rowspan="2">
+			<img src="img/world-map_40.jpg" width="277" height="281" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="1" height="65" alt=""></td>
+	</tr>
+	<tr>
+		<td colspan="3">
+			<img src="img/world-map_41.jpg" width="88" height="216" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="1" height="216" alt=""></td>
+	</tr>
+	<tr>
+		<td>
+			<img src="img/espacio.gif" width="102" height="1" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="23" height="1" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="4" height="1" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="15" height="1" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="19" height="1" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="8" height="1" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="18" height="1" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="17" height="1" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="281" height="1" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="33" height="1" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="5" height="1" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="4" height="1" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="4" height="1" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="45" height="1" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="2" height="1" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="57" height="1" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="198" height="1" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="38" height="1" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="30" height="1" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="20" height="1" alt=""></td>
+		<td>
+			<img src="img/espacio.gif" width="277" height="1" alt=""></td>
+		<td></td>
+	</tr>
+</table>
 		</div>
 	</div>
 
@@ -57,49 +261,6 @@
 		<div class="col-md-2">
 		</div>
 	</div>
-
-
-
-<table id="Table_01" width="1201" height="576" border="0" cellpadding="0" cellspacing="0">
-	<tr>
-		<td rowspan="5">
-			<img src="img/map/images/world-map_01.png" width="166" height="576" alt=""></td>
-		<td colspan="4">
-			<img src="img/map/images/world-map_02.png" width="1034" height="123" alt=""></td>
-		<td>
-			<img src="img/map/images/spacer.gif" width="1" height="123" alt=""></td>
-	</tr>
-	<tr>
-		<td colspan="2">
-			<img src="img/map/images/world-map_03.png" width="308" height="39" alt=""></td>
-		<td rowspan="2">
-			<img src="img/map/images/world-map_04.png" width="32" height="46" alt=""></td>
-		<td rowspan="4">
-			<img src="img/map/images/world-map_05.png" width="694" height="453" alt=""></td>
-		<td>
-			<img src="img/map/images/spacer.gif" width="1" height="39" alt=""></td>
-	</tr>
-	<tr>
-		<td rowspan="2">
-			<img src="img/map/images/world-map_06.png" width="34" height="45" alt=""></td>
-		<td rowspan="3">
-			<img src="img/map/images/world-map_07.png" width="274" height="414" alt=""></td>
-		<td>
-			<img src="img/map/images/spacer.gif" width="1" height="7" alt=""></td>
-	</tr>
-	<tr>
-		<td rowspan="2">
-			<img src="img/map/images/world-map_08.png" width="32" height="407" alt=""></td>
-		<td>
-			<img src="img/map/images/spacer.gif" width="1" height="38" alt=""></td>
-	</tr>
-	<tr>
-		<td>
-			<img src="img/map/images/world-map_09.png" width="34" height="369" alt=""></td>
-		<td>
-			<img src="img/map/images/spacer.gif" width="1" height="369" alt=""></td>
-	</tr>
-</table>
 
 
 
